--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="liV-BN-vYw" id="PUX-Um-qcu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="qnY-5k-Htp"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="qnY-5k-Htp">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="i5i-R7-EaV">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="UIBarItem:" destination="liV-BN-vYw" id="Wcg-hD-NSQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C6n-sG-vGU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
